RESOLVED FIXED50351
Size changes on layer-backed drawing areas don't always end up with the correct value
https://bugs.webkit.org/show_bug.cgi?id=50351
Summary Size changes on layer-backed drawing areas don't always end up with the corre...
Simon Fraser (smfr)
Reported 2010-12-01 14:44:58 PST
LayerBackedDrawingArea needs to check the final size in didSetSize, like ChunkedUpdateDrawingArea does.
Attachments
Patch (4.16 KB, patch)
2010-12-01 14:48 PST, Simon Fraser (smfr)
andersca: review+
Simon Fraser (smfr)
Comment 1 2010-12-01 14:45:41 PST
Simon Fraser (smfr)
Comment 2 2010-12-01 14:48:24 PST
Simon Fraser (smfr)
Comment 3 2010-12-01 15:04:35 PST
Note You need to log in before you can comment on or make changes to this bug.