WebKit2/UIProcess/LayerBackedDrawingAreaProxy.h
@@ -74,7 +74,7 @@ private:
     virtual void attachCompositingContext(uint32_t contextID);
     virtual void detachCompositingContext();
     
-    void didSetSize();
+    void didSetSize(const WebCore::IntSize&);
     void update();
     
     void platformSetSize();
